--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools">
     <uses-permission android:name="android.permission.INTERNET"/>
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -17,6 +15,7 @@
         tools:targetApi="31">
         <activity
             android:name=".activities.MainActivity"
+            android:theme="@style/Base.Theme.PAS_genap_absen18_absen36"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
